# Real-Time-Edge-Detection-Viewer

./: .gitignore  README.md  SETUP_GUIDE.md  copy_opencv_libs.bat  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib-simple.cpp  native-lib.cpp
app/src/main/java/com/flam/edgedetector/: CameraHandler.java  GLRenderer.java  MainActivity.java  NativeProcessor.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
web/: README.md  package.json
web/public/: index.html
web/src/: frameViewer.ts  index.ts  types.ts
